# reguleque-search

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/in/: contrata_9.csv  planta_6.csv
reguleque_search/: auto.py  create_search_key.py  load.py  load_documents.py  load_samples.py  main.jl  main.py  meilisearch_upload.py  schemas.py  typesense_upload.py  upload_ms.py  upload_ts.py
services/: meilisearch.service
