[tool.poetry]
authors = ["Agustín Covarrubias <agucova@uc.cl>"]
description = "Scripts for tidying and indexing documents for Reguleque, a search engine for public worker transparency records from the Chilean government."
name = "reguleque-search"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.3.2"
dask = {extras = ["distributed", "dataframe"], version = "^2021.5.1"}
typer = "^0.3.2"
colorama = "^0.4.4"
art = "^5.2"
tenacity = "^7.0.0"
typesense = "^0.11.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
flake8 = "^3.9.1"
graphviz = "^0.16"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
