[tool.poetry]
authors = ["Agustín Covarrubias <agucova@uc.cl>"]
description = "Scripts for tidying and indexing documents for Reguleque, a search engine for public worker transparency records from the Chilean government."
name = "reguleque-search"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
typesense = "^0.11.0"
bokeh = "^2.3.2"
dask = {extras = ["distributed", "dataframe"], version = "^2022.5.2"}
typer = "^0.3.2"
colorama = "^0.4.4"
art = "^5.2"
tqdm = "^4.64.0"
meilisearch = "^0.18.3"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
flake8 = "^3.9.1"
graphviz = "^0.16"
ipykernel = "^6.15.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
